<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_label">Don\'t have an account? Sign up!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="username_hint">Username</string>
    <string name="login_label">Login</string>
    <string name="parse_application_id">xbnWGRQSGQ5qPLvqvv76bF9DuVvvejBlmXxlJlhH</string>
    <string name="parse_client_key">SHkLftA34mi4RjfaxTK9C23YMCaNjnhSzas2aYOR</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address</string>
    <string name="error_title">Opps!</string>
    <string name="login_error_message">Invalid credentials. Please try again.</string>
    <string name="error_invalid_credentials">Invalid username or password. Please try again</string>
    <string name="no_new_messages">No new messages.</string>
    <string name="no_new_friends">No new friends</string>
    <string name="menu_edit_friend_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="btn_ok">OK</string>
    <string name="error_no_users">Could not find users.</string>
    <string name="camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your devices external storage</string>
    <string name="error_failed_mk_dir">Failed to create directory</string>
    <string name="error_activity_result">Sorry, there was an error!</string>
    <string name="error_could_not_take_video">Could not take video</string>
    <string name="warning_video_size">Video must be less than 10mb</string>
    <string name="error_file_too_large">The selected file is too large</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose</string>
    <string name="empty_recipients">Choose some friends first</string>
    <string name="send_label">Send</string>
    <string name="error_file_selected">There was an error with the file you selected</string>
    <string name="success_message">Message Sent</string>
    <string name="error_sending_message">There was an error sending your message.</string>
    <string name="title_activity_view_image">Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="sign_button_up_label">Sign up</string>
</resources>
