<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.jasonphillips.ribbit.ui.SignupActivity">

    <EditText
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/username_hint"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="24sp">

        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text_view"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_text_view"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text_view"
        android:text="@string/sign_button_up_label"/>

</RelativeLayout>
